# x-transformer-icd

./: .envrc  .gitignore  .gitmodules  Makefile  README.md  activate_conda.sh  autoicd-gcp-credentials.json  colab_testing.ipynb  combined_mimic_bioclinicalBERT_scripts.sh  combined_preprocessing_mimic.sh  create_conda_env_as_necessary.sh  dvc.yaml  environment.yml  eval_linear.sh  eval_transformer.sh  icd9.py  icd9_proc_codes.json  long_roberta_convert.py  long_roberta_convert_no_pretrain.py  new_environment.yml  params.sh  params.yaml  python2_icd9_scraper.py  readme.md  requirements-app.txt  run_preprocess_feat.sh  run_preprocess_label.sh  run_transformer_predict.sh  run_transformer_train.sh  run_transformer_training_prediction.sh  setup.sh  testing.ipynb  xbert_preprocessing_local.py
.dvc/: config
custom_models/: .gitignore  elongate_bioclinical_BERT.py  elongate_biomed_roberta.py  long_roberta_convert_no_pretrain.py  roberta_to_longformer.py
data/: ICD_general_equivalence_mapping.csv.dvc
nbs/: KISS-model.ipynb  exploratory_data_analysis.ipynb
old/: .gitignore  .gitmodules
pipeline/: alternative_preprocessing.py  filter_notes.py  format_data_for_training.py  format_mimic_for_BERT.py  heuristic_tokenize.py  long_roberta_convert_no_pretrain.py  (+3 more)
src/: Makefile  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
src/app/assets/: blurb.md
src/app/streamlit/: AutoICD.py
src/pipeline/: format_data_for_training.py  format_data_for_training_sample.py  format_mimic_for_BERT.py  train_model_kiss.py  xbert_preprocessing.py
src/tests/: test_format_data.py
(+50 files in other folders)
